ticketing/infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    # enable use regex in path section
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: joker7nbt.dev
      http:
          paths:
            - path: /api/users/?(.*)
              backend:
                serviceName: auth-srv
                servicePort: 3000
